spacing correct

--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -369,7 +369,7 @@
   box-shadow: 0 0 15px rgba(255, 169, 63, 0.5);
 }
 
-.footer-bottom {
+/* .footer-bottom {
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -377,7 +377,7 @@
   gap: 2rem;
   padding-top: 1rem;
   border-top: 1px solid var(--color-border);
-}
+} */
 
 .copyright {
   color: var(--color-text-light);
